--- a/src/scss/tabs.scss
+++ b/src/scss/tabs.scss
@@ -3,6 +3,7 @@
     overflow: auto;
     padding: 20px 20px 0 20px;
     scroll-padding: 50px 0 0 50px;
+    min-width: 180px;
 }
 .tab {
     border-radius: $borderRadius;
